# GrabCut

./: CMakeLists.txt  GMM.cpp  GMM.h  GrabCut.cpp  GrabCut.h  GuassianModel.cpp  GuassianModel.h  README.md  main.cpp  result.txt  util.cpp  util.h
maxflow/: graph.h
